--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="./src/assets/ae logo.png" />
+    <link rel="icon" type="image" href="./assets/ae logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DEV: Andre Endique</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="./main.jsx"></script>
   </body>
 </html>
